# PoC_Automation

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.cline/rules/: tuning-safety.md
.deepagents/agents/failure-analyst/: AGENTS.md
.deepagents/agents/generalizer/: AGENTS.md
.github/workflows/: ci.yml
configs/: evaluator_policy.json  runtime.example.json  search_policy.json
docs/: api_runner.md  architecture.md  data_model.md  deepagent_search_agent.md  human_reference_search_agent_v3.md  langfuse.md  langfuse_dashboards.md  mcp_and_agents.md  runbook.md  security.md  target_deepagent_runner.md  tuning_strategy.md
docs/adr/: 0001-final-prototype-architecture.md
docs/prompts/: tuning-candidate-generator.md
examples/: dataset.json  procedure_base.csv
examples/v3_multimodal_human_ref/: dataset.json
infra/: README.md  docker-compose.langfuse.yml  langfuse.env.example
scripts/: create_v3_multimodal_fixture.py  export_full_report.sh  export_report.sh  export_v3_evaluation_summary.py  run_demo.sh  run_tests.sh  summarize_registry.py
src/poc_automation/: __init__.py  agents.py  artifacts.py  cli.py  config.py  csv_patch.py  dataset.py  evaluators.py  evidence.py  generalization.py  langfuse_client.py  mcp_server.py  models.py  registry.py  reporting.py  runner.py  search.py  v3_summary.py
tests/: test_cli_langfuse.py  test_csv_patch.py  test_deepagent_runner.py  test_demo_search.py  test_evaluators.py  test_evidence.py  test_human_reference_v3.py  test_langfuse_client.py  test_reporting.py  test_search_fixes.py
(+18 files in other folders)
