[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poc-automation"
version = "0.1.0"
description = "Automated CSV tuning exploration lab for AI-agent PoC evaluation applications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "PoC Automation contributors"}]
dependencies = []

[project.optional-dependencies]
langfuse = ["langfuse>=3.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "mypy>=1.8.0"]
api = ["fastapi>=0.111.0", "uvicorn>=0.30.0"]

[project.scripts]
poc-auto = "poc_automation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
norecursedirs = [".git", ".venv", ".tmp"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
